--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,11 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+*, :before, :after {
+  box-sizing: border-box;
+}
+
+h1, h2 {
+  margin: 0;
+}
